--- a/jenkins_controller/casc.yml
+++ b/jenkins_controller/casc.yml
@@ -34,3 +34,23 @@ jenkins:
                 ...
                 -----END RSA PRIVATE KEY-----
             scope: GLOBAL
+
+  tool:
+    sonarRunnerInstallation:
+      installations:
+      - name: "SonarQube"
+        properties:
+        - installSource:
+          installers:
+          - sonarRunnerInstaller:
+            id: "4.7.0.2747"
+
+  unclassified:
+    sonarGlobalConfiguration:
+      buildWrapperEnabled: true
+      installations:
+      - name: "SonarQube"
+        serverUrl: "http://192.168.44.44:9000"
+        triggers:
+          skipScmCause: false
+          skipUpstreamCause: false
