--- a/jenkins_controller/casc.yml
+++ b/jenkins_controller/casc.yml
@@ -76,6 +76,11 @@ credentials:
                 3yT4Y6nURG40o/TQAAAA1wYW5kYUB2YWdyYW50AQIDBA==
                 -----END OPENSSH PRIVATE KEY-----
           scope: GLOBAL
+jobs:
+  - file: /usr/share/jenkins/ref/jobs/backend.groovy
+  - file: /usr/share/jenkins/ref/jobs/frontend.groovy
+  - file: /usr/share/jenkins/ref/jobs/apps_of_apps.groovy
+
 tool:
   sonarRunnerInstallation:
     installations:
