--- a/jenkins_controller/casc.yml
+++ b/jenkins_controller/casc.yml
@@ -90,6 +90,14 @@ tool:
           installers:
           - sonarRunnerInstaller:
               id: "4.7.0.2747"
+  terraform:
+    installations:
+    - name: "Terraform"
+      properties:
+      - installSource:
+          installers:
+          - terraformInstaller:
+              id: "1.4.4-linux-amd64"
  
 unclassified:
   location:
@@ -102,3 +110,5 @@ unclassified:
       triggers:
         skipScmCause: false
         skipUpstreamCause: false
+
+
